--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <script>
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
-  const items = [];
+  const items = JSON.parse(localStorage.getItem('items')) || [];
   function addItem(e){
     e.preventDefault();
     const text = (this.querySelector('[name=item]')).value;
@@ -39,6 +39,7 @@
     
     items.push(item);
     populateList(items, itemsList);
+    localStorage.setItem('items', JSON.stringify(items));
     this.reset();
   }
   
@@ -60,6 +61,8 @@ function populateList(plates = [], platesList){
   
   
   addItems.addEventListener('submit', addItem);
+
+  populateList(items, itemsList);
 
 </script>
 
