--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <form class="add-items">
       <input type="text" name="item" placeholder="Item Name" required>
       <input type="submit" value="+ Add Item">
+      
     </form>
+    <button>reset</button>
   </div>
 
 <script>
@@ -58,9 +60,19 @@ function populateList(plates = [], platesList){
   }).join('');
 
 }
+function toggleDone(e){
+  if(!e.target.matches('input')) return;
+  const el = e.target;
+  const index = el.dataset.index;
+  items[index].done = !items[index].done;
+  localStorage.setItem('items', JSON.stringify(items));
+  populateList(items, itemsList);
+
+}
   
   
   addItems.addEventListener('submit', addItem);
+  itemsList.addEventListener('click', toggleDone);
 
   populateList(items, itemsList);
 
